@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.6 =
 -------------------------------------------------
+* Fixed a problem with change WooCommerce product status to "Out of stock".
 
 = 2.0.5 =
 -------------------------------------------------
